--- a/board.css
+++ b/board.css
@@ -2,22 +2,19 @@ html, body {
 	height: 100%;
 }
 
-body {
-	
-	/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#ffa84c+0,ff7b0d+100;Orange+3D */
-	background: #ffa84c; /* Old browsers */
-	background: -moz-linear-gradient(top,  #ffa84c 0%, #ff7b0d 100%); /* FF3.6+ */
-	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#ffa84c), color-stop(100%,#ff7b0d)); /* Chrome,Safari4+ */
-	background: -webkit-linear-gradient(top,  #ffa84c 0%,#ff7b0d 100%); /* Chrome10+,Safari5.1+ */
-	background: -o-linear-gradient(top,  #ffa84c 0%,#ff7b0d 100%); /* Opera 11.10+ */
-	background: -ms-linear-gradient(top,  #ffa84c 0%,#ff7b0d 100%); /* IE10+ */
-	background: linear-gradient(to bottom,  #ffa84c 0%,#ff7b0d 100%); /* W3C */
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffa84c', endColorstr='#ff7b0d',GradientType=0 ); /* IE6-9 */
-		
+input {
+  width: 95%;
 }
+
+#new-label {
+  width: 100%;
+  height: 5%;
+  padding: 2.5em; 
+}
+
 #sample {
   width: 100%;
-  height: 100%;
+  height: 95%;
 }
 
 .main-d {	
@@ -29,7 +26,7 @@ body {
 
 .status, .label {
 	#position: relative;
-	background-color: yellow;
+	background-color: orange;
 	border: 3px solid green;
 	box-sizing: border-box;
 	font-weight: bold;
