--- a/board.css
+++ b/board.css
@@ -3,10 +3,10 @@ html, body {
 }
 
 
-#new-label {
+#header {
   width: 100%;
   height: 5%;
-  padding: 2.5em; 
+	margin: 2.5em; 
 }
 
 #sample {
@@ -23,8 +23,7 @@ html, body {
 
 .status {
 	#position: relative;
-	background-color: orange;
-	border: 3px solid green;
+	border: 1px solid grey;
 	box-sizing: border-box;
 	font-weight: bold;
 	color: grey;
